# dedsec-os

./: .gitignore  CLEANUP_SUMMARY.txt  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml  django.yml  python-anaconda.yml  python-package.yml  release.yml
config/: dedsec.service  settings.py
core/: __init__.py  logging.py
docs/: DEVELOPER_GUIDE.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_INDEX_3_2.md  NEXT_TASKS_CHECKLIST.md  PORT_SCANNER_SUMMARY.txt  README.md
docs/architecture/: ARCHITECTURE_BLUEPRINT_3_2.md  ARCHITECTURE_DIAGRAM_3_2.md
docs/guides/: CONFIG_USAGE_GUIDE.md  LOGGING_QUICK_START.md  QUICK_START_STATE_THEMES.md  RENDERING_QUICK_START.md
docs/phase1/: IMPLEMENTATION_1_1_1.md  IMPLEMENTATION_1_1_3.md  IMPLEMENTATION_1_1_4.md  IMPLEMENTATION_1_2_COMPLETE.md  IMPLEMENTATION_1_3_COMPLETE.md  IMPLEMENTATION_1_4_COMPLETE.md  PHASE_1_COMPLETE.md  VERSION_1_1_4_COMPLETE.md
docs/phase2/: IMPLEMENTATION_2_1_1_COMPLETE.md  IMPLEMENTATION_2_1_2_COMPLETE.md  IMPLEMENTATION_2_1_3_COMPLETE.md  IMPLEMENTATION_2_2_COMPLETE.md  IMPLEMENTATION_2_3_COMPLETE.md  IMPLEMENTATION_2_4_COMPLETE.md  IMPLEMENTATION_2_5_COMPLETE.md  PHASE2_ROADMAP.md  PHASE_2_SECURITY_FOUNDATION_COMPLETE.md  POWER_OPTIMIZATION.md  ROADMAP_SECTIONS_2-8_AND_11.md  SELINUX_APPARMOR_ANALYSIS.md
docs/phase3/: BUGFIXES_QUICKREF.md  COMPLETION_SUMMARY_TASKS_7_8.md  COMPLETION_TASK_12.md  COMPLETION_TASK_9.md  DELIVERY_REPORT_3_2.md  IMPLEMENTATION_3_1_1_COMPLETE.md  IMPLEMENTATION_3_1_2_COMPLETE.md  IMPLEMENTATION_3_2_BUGFIXES.md  IMPLEMENTATION_3_2_STATE_THEME.md  MANIFEST_3_2.md  MILESTONE_50_PERCENT.md  PHASE_3_2_EXECUTION_SUMMARY.md  PHASE_3_2_INDEX.md  PROGRESS_3_2_2.md  SESSION_COMPLETION_TASKS_7_8.md  TASK_13_COMPLETE.md  TASK_9_COMPLETE.md  UI_REDESIGN_v1.1.2.5.md
docs/sessions/: SESSION_SUMMARY_NOV22.md  SESSION_SUMMARY_NOV22_PART2.md  SESSION_UPDATE_NOV22.md
scripts/: deploy_to_pi.sh
tests/: __init__.py  conftest.py  run_tests.py  test_animations.py  test_architecture.py  test_components.py  test_diagnostics.py  test_themes.py
ui/: __init__.py  animations.py  architecture.py  components.py  diagnostics.py  rendering.py  state.py  themes.py  tool_manager.py
webui/: WebUI-Future-Plan.md
